Building an E-commerce app with .NET Core and Angular - Day three - 5 - Api Architecture - End of section 3

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ROBINHAIDER;Database=Skinet;Trusted_Connection=True;"
+    "DefaultConnection": "Data source=skinet.db"
   }
 }
